--- a/classmate.html
+++ b/classmate.html
@@ -44,7 +44,7 @@
         <div class="container team__container">
             <article class="team__member">
                 <div class="team__member__image">
-                    <img src="./image/hriday.jpeg" alt="Hriday Kundu">
+                    <img src="./Assets/hriday.jpeg" alt="Hriday Kundu">
                 </div>
                 <div class="team__member__info">
                     <h4>Hriday Kundu</h4>
@@ -267,4 +267,5 @@
     </script>
 
 </body>
+
 </html>
