--- a/classmate.html
+++ b/classmate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Classmate-cse</title>
+    <title>SITIANS UNIVERSE</title>
 
     <!-- ========== cdn link for icons ================= -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.2.0/css/line.css">
@@ -269,3 +269,4 @@
 </body>
 
 </html>
+
