--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>SITIANS UNIVERSE</title>
+    <!----link for google font---->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <!----link for animations---->
     <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.1/dist/dotlottie-wc.js" type="module"></script>
     
     <style>
@@ -103,10 +105,11 @@
         }
 
         .cta-button:hover {
-            background-color: rgb(0, 94, 0); 
+            background-color: rgb(140, 4, 124); 
             transform: translateY(-4px);
             color: white;
-            border: 1px solid white;
+            border: 1.5px solid rgb(255, 255, 255);
+            box-shadow: 0 0 40px rgba(5, 130, 255, 0.8);
         }
 
         .loading-container {
@@ -266,4 +269,5 @@
     </script>
     
 </body> 
+
 </html>   
