--- a/classmate.html
+++ b/classmate.html
@@ -51,7 +51,7 @@
         <div class="container team__container">
             <article class="team__member">
                 <div class="team__member__image">
-                    <img src="./image/hriday.jpeg" alt="Hriday Kundu">
+                    <img src="./Assets/hriday.jpeg" alt="Hriday Kundu">
                 </div>
                 <div class="team__member__info">
                     <h4>Hriday Kundu</h4>
@@ -247,6 +247,7 @@
 </body>
 
 </html>
+
 
 
 
