--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             color: var(--base-violet); 
             white-space: nowrap;
             margin-top: -2rem; 
-            margin-left: -2rem;
+            text-align: center;
             align-self: center;
         }
         
@@ -125,12 +125,6 @@
         }
 
         /* ==================== MEDIA QUERIES (PHONE) ==================== */
-        @media screen and (max-width: 900px) {
-            .main-heading {
-                margin-left: -4rem;
-            }
-        }
-
         @media screen and (max-width: 600px) {
             .fly-ani {
                 margin-top: -10rem;
@@ -138,11 +132,7 @@
 
             .main-heading {
                 font-size: 2.2rem; 
-                color: var(--base-violet); 
-                white-space: nowrap;
-                margin-top: 0rem; 
-                margin-left: -2rem;
-                align-self: center;
+                margin-top: -1rem; 
             }
 
             .subtitle {
@@ -173,11 +163,9 @@
     <div class="content-container">
         <div class="header-section">   
             <dotlottie-wc src="https://lottie.host/6ef3ca02-8151-44fb-a53e-d92bb9ec8181/alN8PMqttd.lottie" class="fly-ani" autoplay loop></dotlottie-wc>
-            <h1 class="main-heading">
-                SITIANS UNIVERSE
-            </h1>
+            <h1 class="main-heading">  SITIANS UNIVERSE  </h1>
             <p class="subtitle">
-                Connect with your friends of SIT College. (2025-2029)
+                Connect with your friends of SIT College. (Batch 2025-2029)
             </p>
         </div>
 
@@ -271,3 +259,4 @@
 </body> 
 
 </html>   
+
