--- a/classmate.html
+++ b/classmate.html
@@ -65,7 +65,7 @@
                 </div>
             </article>
 
-            article class="team__member">
+            <article class="team__member">
                 <div class="team__member__image">
                     <img src="./Assets/kunal42.jpeg" alt="Kunal Mandal">
                 </div>
@@ -247,6 +247,7 @@
 </body>
 
 </html>
+
 
 
 
