--- a/classmate.html
+++ b/classmate.html
@@ -31,6 +31,8 @@
                     <!--==========here you can add more section========= -->     
                     <li><a href="#section-a">Section A</a></li>    
                     <li><a href="#section-b">Section B</a></li>
+
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc1zyaCRDQE4BGppSedoGXl69OkGKWAP-ceVkgPtkdV8Cm-SA/viewform?usp=dialog" target="_blank">Add_Me</a></li>
                 </ul>
             </nav>
         </div>
@@ -108,7 +110,7 @@
                 <div class="team__member__socials">
                     <a href="https://www.facebook.com/share/1CqMeN491s/" target="_blank" aria-label="Facebook"><i class="uil uil-facebook-f"></i></a>
                     <a href="https://www.instagram.com/awwditih?igsh=MTVpc3UzYWlqaGxudA==" target="_blank" aria-label="Instagram"><i class="uil uil-instagram"></i></a>
-                    <a href="#" target="_blank" aria-label="LinkedIn"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="https://www.linkedin.com/in/aditi-das-6743b9379?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" aria-label="LinkedIn"><i class="uil uil-linkedin-alt"></i></a>
                     <a href="https://github.com/aditidas15" target="_blank" aria-label="GitHub"><i class="uil uil-github-alt"></i></a>
                 </div>
             </article>
@@ -247,6 +249,7 @@
 </body>
 
 </html>
+
 
 
 
