--- a/classmate.html
+++ b/classmate.html
@@ -131,6 +131,22 @@
                 </div>
             </article>
 
+            <article class="team__member">
+                <div class="team__member__image">
+                    <img src="./Assets/Rinku Singha-A-51.jpeg" alt="rinku singha">
+                </div>
+                <div class="team__member__info">
+                    <h4>Rinku Singha</h4>
+                    <p>Dept- CSE, Roll- 51</p>
+                </div>
+                <div class="team__member__socials">
+                    <a href="#" aria-label="Facebook"><i class="uil uil-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/dam_itx.rinku?igsh=aWlxbW1uajNla2U5&utm_source=qr" target="_blank" aria-label="Instagram"><i class="uil uil-instagram"></i></a>
+                    <a href="#" target="_blank" aria-label="LinkedIn"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="#" target="_blank" aria-label="GitHub"><i class="uil uil-github-alt"></i></a>
+                </div>
+            </article>
+
         </div>
     </section>
 
@@ -249,6 +265,7 @@
 </body>
 
 </html>
+
 
 
 
