--- a/classmate.html
+++ b/classmate.html
@@ -147,6 +147,22 @@
                 </div>
             </article>
 
+            <article class="team__member">
+                <div class="team__member__image">
+                    <img src="./Assets/Madhushree Mishra.jpg" alt="Madhushree Mishra">
+                </div>
+                <div class="team__member__info">
+                    <h4>Madhushree Mishra</h4>
+                    <p>Dept- CSE, Roll- 41</p>
+                </div>
+                <div class="team__member__socials">
+                    <a href="#" aria-label="Facebook"><i class="uil uil-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/kaizen._10?igsh=MWh2dDZscThhYWp5MQ==" target="_blank" aria-label="Instagram"><i class="uil uil-instagram"></i></a>
+                    <a href="#"  aria-label="LinkedIn"><i class="uil uil-linkedin-alt"></i></a>
+                    <a href="#"  aria-label="GitHub"><i class="uil uil-github-alt"></i></a>
+                </div>
+            </article>
+
         </div>
     </section>
 
@@ -265,6 +281,7 @@
 </body>
 
 </html>
+
 
 
 
