--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <dotlottie-wc src="https://lottie.host/6ef3ca02-8151-44fb-a53e-d92bb9ec8181/alN8PMqttd.lottie" class="fly-ani" autoplay loop></dotlottie-wc>
             <h1 class="main-heading">  SITIANS UNIVERSE  </h1>
             <p class="subtitle">
-                Connect with your friends of SIT College. (Batch 2025-2029)
+                Infinite friendships, orbiting as one, a boundless journey where our hearts are forever anchored, and our light never fades.
             </p>
         </div>
 
@@ -270,5 +270,6 @@
 </body> 
 
 </html>   
+
 
 
