--- a/classmate.html
+++ b/classmate.html
@@ -100,9 +100,11 @@
 
     <!------link with javascript file------>
     <script src="classmate.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.5/dist/dotlottie-wc.js" type="module" ></script>
 </body>
 
 </html>
+
 
 
 
